Implemented initial static "desktop" with launch icons

--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
     <title>Aethernet Desktop</title>
     <link rel="stylesheet" type="text/css" href="assets/css/site.css">
   </head>
+  <style>
+  /*.canvas {
+    position:absolute;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    z-index:-1;
+  }*/
+  </style>
   <body aurelia-app="main">
     <!-- This is splash screen content that will be
          overwritten by aurelia once it loads -->
