Added nav bar and minor enhancements to desktop

--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html>
   <head>
     <title>Aethernet Desktop</title>
+    <require from="font-awesome/css/font-awesome.min.css"></require>
+    <require from="bootstrap/css/bootstrap.min.css"></require>
     <link rel="stylesheet" type="text/css" href="assets/css/site.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <style>
   /*.canvas {
@@ -18,7 +21,8 @@
     <!-- This is splash screen content that will be
          overwritten by aurelia once it loads -->
     <div class="splash">
-      <div class="message">Loading...</div>
+      <div class="message">Aethernet</div>
+      <div>Booting...</div>
       <i class="fa fa-spinner fa-spin"></i>
     </div>
 
