--- a/src-client/app.html
+++ b/src-client/app.html
@@ -5,17 +5,18 @@
   with the <router-view> tag
 -->
 <template>
+  <require from="nav-bar.html"></require>
   <!-- These tags let us include third-party css files from JSPM packages
        without needing to worry about the version part of the path
        that can change as we update to new version of our libraries  -->
   <require from="font-awesome/css/font-awesome.min.css"></require>
   <require from="bootstrap/css/bootstrap.min.css"></require>
+  <!-- Main site css -->
+  <require from="../assets/css/site.css"></require>
 
-  <div class="container">
-    <div class="site-body">
-      <!-- This is where our child views ("pages") will be rendered -->
-      <router-view></router-view>
-    </div>
+  <nav-bar router.bind="router"></nav-bar>
+
+  <div class="page-host">
+    <router-view></router-view>
   </div>
-
 </template>
