Adding Keldata game as an app (really need this in a database somewhere)

--- a/src-client/app.html
+++ b/src-client/app.html
@@ -22,6 +22,6 @@
   <div class="page-host">
     <router-view></router-view>
   </div>
-  <log-view></log-view>
+  <!-- <log-view></log-view> -->
   <status-bar></status-bar>
 </template>
